[gd_scene load_steps=16 format=3 uid="uid://de10cffdqxukf"]

[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/MainScene.gd" id="1_bx67t"]
[ext_resource type="Texture2D" uid="uid://bpgbv8l25ej0q" path="res://NielBreenZapsTerrorists/Art/Breen_Back.png" id="1_sodew"]
[ext_resource type="Texture2D" uid="uid://d16qa2vo6565j" path="res://NielBreenZapsTerrorists/Art/CoolcatMainSprite.png" id="2_1oumf"]
[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/RigidBody2D.gd" id="3_5cu18"]
[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/CollisionPolygon2D.gd" id="4_kt230"]
[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/CoolcatMainSprite.gd" id="6_bo4v0"]
[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/Terror1.gd" id="7_wx5q5"]
[ext_resource type="Texture2D" uid="uid://10tykbjitlax" path="res://NielBreenZapsTerrorists/Art/TerroristBL.png" id="8_68iaa"]
[ext_resource type="Texture2D" uid="uid://cglpfwgxjx7pr" path="res://NielBreenZapsTerrorists/Art/Terrorist_BR.png" id="9_lq35u"]
[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/Terror2.gd" id="9_rokmx"]
[ext_resource type="Texture2D" uid="uid://gx78k40r52x1" path="res://NielBreenZapsTerrorists/Art/terrorist_UM.png" id="10_4hbm4"]
[ext_resource type="Texture2D" uid="uid://l1uabw3a7f60" path="res://NielBreenZapsTerrorists/Art/terror_UR.png" id="11_3vbkm"]
[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/Terror3.gd" id="11_fpo6h"]
[ext_resource type="Script" path="res://NielBreenZapsTerrorists/MainScene/Terror4.gd" id="13_o2u3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4cho"]
size = Vector2(107, 212.625)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_bx67t")

[node name="BreenBack" type="Sprite2D" parent="."]
position = Vector2(576.5, 329)
scale = Vector2(1.12573, 1.24231)
texture = ExtResource("1_sodew")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
gravity_scale = 0.0
script = ExtResource("3_5cu18")

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RigidBody2D/Area2D"]
polygon = PackedVector2Array(520, 449, 586, 446, 588, 469, 606, 529, 658, 574, 608, 654, 521, 661, 467, 598, 467, 566, 509, 533, 505, 499, 514, 482)
script = ExtResource("4_kt230")

[node name="CoolcatMainSprite" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(558, 547)
scale = Vector2(0.215686, 0.246234)
texture = ExtResource("2_1oumf")
script = ExtResource("6_bo4v0")

[node name="Terror1" type="RigidBody2D" parent="." groups=["Terrorist"]]
position = Vector2(188, 485)
gravity_scale = 0.0
script = ExtResource("7_wx5q5")

[node name="Area2D" type="Area2D" parent="Terror1"]
position = Vector2(-79, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terror1/Area2D"]
position = Vector2(102, 124)
shape = SubResource("RectangleShape2D_a4cho")

[node name="TerroristBl" type="Sprite2D" parent="Terror1"]
position = Vector2(30, 62)
scale = Vector2(1.126, 1.242)
texture = ExtResource("8_68iaa")

[node name="Terror2" type="RigidBody2D" parent="." groups=["Terrorist"]]
position = Vector2(933, 452)
gravity_scale = 0.0
script = ExtResource("9_rokmx")

[node name="Area2D" type="Area2D" parent="Terror2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terror2/Area2D"]
position = Vector2(58, 92)
shape = SubResource("RectangleShape2D_a4cho")

[node name="TerroristBr" type="Sprite2D" parent="Terror2"]
position = Vector2(69.0001, 84)
scale = Vector2(1.126, 1.242)
texture = ExtResource("9_lq35u")

[node name="Terror3" type="RigidBody2D" parent="." groups=["Terrorist"]]
position = Vector2(421, 38)
gravity_scale = 0.0
script = ExtResource("11_fpo6h")

[node name="Area2D" type="Area2D" parent="Terror3"]
position = Vector2(1, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terror3/Area2D"]
position = Vector2(104, 92)
shape = SubResource("RectangleShape2D_a4cho")

[node name="TerroristUm" type="Sprite2D" parent="Terror3"]
position = Vector2(106, 93)
scale = Vector2(1.126, 1.242)
texture = ExtResource("10_4hbm4")

[node name="Terror4" type="RigidBody2D" parent="." groups=["Terrorist"]]
position = Vector2(585, 31)
gravity_scale = 0.0
script = ExtResource("13_o2u3e")

[node name="Area2D" type="Area2D" parent="Terror4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terror4/Area2D"]
position = Vector2(64.5, 72.375)
shape = SubResource("RectangleShape2D_a4cho")

[node name="TerrorUr" type="Sprite2D" parent="Terror4"]
position = Vector2(68, 86)
scale = Vector2(1.126, 1.242)
texture = ExtResource("11_3vbkm")

[connection signal="youlose" from="RigidBody2D" to="." method="_on_rigid_body_2d_youlose"]
[connection signal="input_event" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_area_2d_input_event"]
[connection signal="winningBL" from="Terror1" to="." method="_on_terror_1_winning_bl"]
[connection signal="input_event" from="Terror1/Area2D" to="Terror1" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Terror1/Area2D" to="Terror1" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Terror1/Area2D" to="Terror1" method="_on_area_2d_mouse_exited"]
[connection signal="winningBR" from="Terror2" to="." method="_on_terror_2_winning_br"]
[connection signal="input_event" from="Terror2/Area2D" to="Terror2" method="_on_area_2d_input_event"]
[connection signal="winningUM" from="Terror3" to="." method="_on_terror_3_winning_um"]
[connection signal="input_event" from="Terror3/Area2D" to="Terror3" method="_on_area_2d_input_event"]
[connection signal="winningUR" from="Terror4" to="." method="_on_terror_4_winning_ur"]
[connection signal="input_event" from="Terror4/Area2D" to="Terror4" method="_on_area_2d_input_event"]
